--- a/src/main/resources/com/example/eco_route/user_view.css
+++ b/src/main/resources/com/example/eco_route/user_view.css
@@ -1,14 +1,14 @@
 .input-box {
     -fx-background-color: rgba(255,255,255,0.75);
     -fx-background-radius: 20;
-    -fx-padding: 30 35;
+    -fx-padding: 15;
     -fx-effect: dropshadow(gaussian, rgba(0,0,0,0.25), 20, 0, 0, 5);
 }
 
 .sidebar-button {
     -fx-background-color: #eeeeee;
     -fx-background-radius: 10;
-    -fx-pref-height: 40;
+    -fx-pref-height: 30;
     -fx-padding: 15;
 }
 
