--- a/src/main/resources/com/example/eco_route/admin_login_view.fxml
+++ b/src/main/resources/com/example/eco_route/admin_login_view.fxml
@@ -13,7 +13,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<ScrollPane fx:id="rootPane" fitToWidth="true" pannable="true" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1">
+<ScrollPane fx:id="rootPane" fitToWidth="true" fx:controller="com.example.eco_route.AdminLoginViewController" pannable="true" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1">
     <content>
         <AnchorPane  maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="1400.0" prefWidth="1400.0" stylesheets="@admin_login_view.css" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1">
             <children>
