--- a/src/main/resources/com/example/eco_route/manage_route_view.fxml
+++ b/src/main/resources/com/example/eco_route/manage_route_view.fxml
@@ -1,55 +1,115 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="com.example.eco_route.ManageRoutesController"
-            prefWidth="1000" prefHeight="650">
+<AnchorPane prefHeight="800.0" prefWidth="1400.0" styleClass="root" stylesheets="@manage_route_view.css" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.eco_route.ManageRoutesController">
 
-    <VBox spacing="15" AnchorPane.topAnchor="20" AnchorPane.leftAnchor="20"
-          AnchorPane.rightAnchor="20">
+    <VBox spacing="15" AnchorPane.leftAnchor="20" AnchorPane.rightAnchor="20" AnchorPane.topAnchor="20">
+        <Pane prefHeight="123.0" prefWidth="1360.0">
+            <children>
+                <ImageView fitHeight="70.0" fitWidth="95.0" layoutX="557.0" layoutY="28.0" pickOnBounds="true" preserveRatio="true">
+                    <image>
+                        <Image url="@logo.png" />
+                    </image>
+                </ImageView>
+                <Label layoutX="640.0" layoutY="36.0" prefHeight="51.0" prefWidth="165.0" text="Eco-Route" textFill="#2e13ff">
+                    <font>
+                        <Font name="System Bold" size="30.0" />
+                    </font>
+                </Label>
+            </children>
+        </Pane>
 
-        <Label text="Manage Routes"
-               style="-fx-font-size: 22px; -fx-font-weight: bold;" />
+        <Label styleClass="heading" text="Manage Routes">
+            <VBox.margin>
+                <Insets left="300.0" />
+            </VBox.margin></Label>
 
         <HBox spacing="10">
-            <Label text="Select Route:"/>
-            <ComboBox fx:id="routeComboBox" prefWidth="300"
-                      onAction="#loadSelectedRoute"/>
+            <Label text="Select Route:">
+                <font>
+                    <Font size="15.0" />
+                </font>
+                <HBox.margin>
+                    <Insets top="10.0" />
+                </HBox.margin></Label>
+            <ComboBox fx:id="routeComboBox" onAction="#loadSelectedRoute" prefWidth="300" styleClass="input_bar" />
+            <VBox.margin>
+                <Insets left="300.0" top="10.0" />
+            </VBox.margin>
         </HBox>
 
-        <GridPane hgap="15" vgap="15">
+        <GridPane hgap="15" prefHeight="250.0" prefWidth="1060.0" vgap="15">
             <columnConstraints>
-                <ColumnConstraints prefWidth="150"/>
-                <ColumnConstraints prefWidth="300"/>
+                <ColumnConstraints prefWidth="150" />
+                <ColumnConstraints prefWidth="300" />
             </columnConstraints>
 
-            <Label text="Origin:" GridPane.rowIndex="0"/>
-            <TextField fx:id="originField" GridPane.rowIndex="0" GridPane.columnIndex="1"/>
+            <Label text="Origin:" GridPane.rowIndex="0">
+                <font>
+                    <Font size="15.0" />
+                </font></Label>
+            <TextField fx:id="originField" styleClass="input_bar" GridPane.columnIndex="1" GridPane.rowIndex="0" />
 
-            <Label text="Destination:" GridPane.rowIndex="1"/>
-            <TextField fx:id="destinationField" GridPane.rowIndex="1" GridPane.columnIndex="1"/>
+            <Label text="Destination:" GridPane.rowIndex="1">
+                <font>
+                    <Font size="15.0" />
+                </font></Label>
+            <TextField fx:id="destinationField" styleClass="input_bar" GridPane.columnIndex="1" GridPane.rowIndex="1" />
 
-            <Label text="Fuel (Liters):" GridPane.rowIndex="2"/>
-            <TextField fx:id="fuelField" GridPane.rowIndex="2" GridPane.columnIndex="1"/>
+            <Label text="Fuel (Liters):" GridPane.rowIndex="2">
+                <font>
+                    <Font size="15.0" />
+                </font></Label>
+            <TextField fx:id="fuelField" styleClass="input_bar" GridPane.columnIndex="1" GridPane.rowIndex="2" />
 
-            <Label text="Time (Hours):" GridPane.rowIndex="3"/>
-            <TextField fx:id="timeField" GridPane.rowIndex="3" GridPane.columnIndex="1"/>
+            <Label text="Time (Hours):" GridPane.rowIndex="3">
+                <font>
+                    <Font size="15.0" />
+                </font></Label>
+            <TextField fx:id="timeField" styleClass="input_bar" GridPane.columnIndex="1" GridPane.rowIndex="3" />
 
-            <Label text="Ticket Price:" GridPane.rowIndex="4"/>
-            <TextField fx:id="ticketField" GridPane.rowIndex="4" GridPane.columnIndex="1"/>
+            <Label text="Ticket Price:" GridPane.rowIndex="4">
+                <font>
+                    <Font size="15.0" />
+                </font></Label>
+            <TextField fx:id="ticketField" styleClass="input_bar" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+            <rowConstraints>
+                <RowConstraints />
+                <RowConstraints />
+                <RowConstraints />
+                <RowConstraints />
+                <RowConstraints />
+            </rowConstraints>
+            <VBox.margin>
+                <Insets left="300.0" top="50.0" />
+            </VBox.margin>
         </GridPane>
 
-        <HBox spacing="15">
-            <Button text="Update Route" onAction="#updateRoute"/>
-            <Button text="Reset" onAction="#resetFields"/>
-            <Button text="Back" onAction= "#back"/>
+        <HBox prefHeight="44.0" prefWidth="500.0" spacing="15">
+            <Button onAction="#updateRoute" styleClass="updateButton" text="Update Route" />
+            <Button onAction="#resetFields" prefHeight="38.0" prefWidth="75.0" styleClass="resetButton" text="Reset" />
+            <Button onAction="#back" prefHeight="38.0" prefWidth="73.0" styleClass="backButton" text="Back" />
+            <VBox.margin>
+                <Insets left="300.0" top="50.0" />
+            </VBox.margin>
         </HBox>
 
-        <Label fx:id="statusLabel" style="-fx-text-fill: green;"/>
+        <Label fx:id="statusLabel" style="-fx-text-fill: green;" />
 
     </VBox>
 
