--- a/src/main/resources/com/example/eco_route/admin_view.fxml
+++ b/src/main/resources/com/example/eco_route/admin_view.fxml
@@ -14,7 +14,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
-<BorderPane stylesheets="@admin_view.css" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.eco_route.AdminViewController">
+<BorderPane prefHeight="800.0" prefWidth="1400.0" stylesheets="@admin_view.css" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.eco_route.AdminViewController">
 
     <top>
         <HBox alignment="CENTER_LEFT" spacing="15" styleClass="top-header">
